# ferx

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  open-source-publish-checklist.md  project-structure.md  refactor-js-extraction.md  release-process.md
docs/plans/: 2026-04-30-service-context-menu-redesign.md
docs/specs/: 2026-04-30-service-context-menu-redesign.md
docs/superpowers/plans/: 2026-06-18-service-hibernation.md  2026-06-19-hibernated-sidebar-state.md  2026-06-26-notification-previews.md
docs/superpowers/specs/: 2026-04-15-settings-page-design.md  2026-06-18-service-hibernation-design.md  2026-06-26-notification-previews-design.md
scripts/: bump-version.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: audio_mute_controller.js  badge_engine.js  badge_engine_scaffold.js  badge_engine_utils.js  common_webview.js  google_auth_compat.js  google_chat_badge_engine.js  outlook_badge_engine.js  resource_usage_monitor.js  teams_badge_engine.js  telegram_badge_engine.js  whatsapp_badge_engine.js
src-tauri/src/: app_state.rs  badge_payload.rs  desktop_ui.rs  download_dialog.rs  file_drop.rs  lib.rs  lib_tests.rs  macos_defaults.rs  main.rs  navigation_bridge.rs  service_runtime.rs  service_storage.rs  service_webview.rs  service_webview_badge_scripts.rs  service_webview_resource_usage.rs  service_webview_runtime_scripts.rs  webview_commands.rs  window_layout.rs
src/lib/: tauri-commands.ts
src/lib/services/: app-info.test.ts  app-info.ts  app-settings.test.ts  app-settings.ts  badge-engine-scaffold-script.test.ts  badge-engine-script.test.ts  badge-engine-test-utils.ts  badge-strategies.test.ts  badge-strategies.ts  dnd-state.svelte.ts  drag-drop.svelte.test.ts  drag-drop.svelte.ts  reorder.test.ts  (+58 more)
src/routes/: +layout.svelte  +page.svelte  page-service-state.test.ts  page-spell-check-setting.test.ts  page-todos-panel.test.ts  page-workspace-switching.test.ts
(+19 files in other folders)
