[package]
name = "ferx"
version = "0.3.1"
description = "Desktop workspace for messaging and productivity web apps."
authors = ["adiwidia-dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ferx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enabled automatically by `yarn tauri dev` via the package.json script.
# Release builds (`yarn tauri build ...`) never pass this flag, so the
# dev-only MCP bridge is completely absent from the shipped binary.
devtools = ["dep:tauri-plugin-mcp-bridge"]

[dependencies]
# Ferx relies on child webviews, which are still gated behind Tauri's unstable
# multiwebview surface. The macOS private API flag is also intentional for the
# current desktop UX; App Store distribution is not a target for this build.
tauri = { version = "2", features = ["macos-private-api", "unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-mcp-bridge = { version = "0.11", optional = true }
tokio = { version = "1", features = ["time"] }
url = "2"
rfd = "0.15"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "s"
debug = false
incremental = false
overflow-checks = false

# Optimise build-scripts and proc-macros so release builds stay reasonable.
[profile.release.build-override]
opt-level = 0
codegen-units = 16

# Also optimise every transitive dependency for size; saves a few MB in the
# final universal-apple-darwin bundle without hurting correctness.
[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
